Checking and updating files

--- a/data_generator/3_data_analyst.ipynb
+++ b/data_generator/3_data_analyst.ipynb
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "6083a085",
    "metadata": {},
    "outputs": [
@@ -721,7 +721,7 @@
     "\n",
     "#Pies charts\n",
     "fig, ax = plt.subplots()\n",
-    "ax.pie(y, labels = x, autopct='%1.1f%%', wedgeprops={\"linewidth\":2,\"edgecolor\": \"white\"}, colors = colors)\n",
+    "ax.pie(y, labels = x, autopct='%1.1f%%', wedgeprops={\"linewidth\":2,\"edgecolor\": \"white\"}, colors = colors) #type: ignore\n",
     "ax.legend()\n",
     "plt.title('Clients by Gender')\n",
     "plt.show()\n"
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "cfa454e1",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
     "\n",
     "    combined_df = pd.concat(show_sheet, ignore_index=True)\n",
     "    missing_values = combined_df[combined_df[\"Missing_values\"] > 0]\n",
-    "    missing_values = missing_values.sort_values([\"Sheet\",\"Missing_values\"], ascending=[True, False])\n",
+    "    missing_values = missing_values.sort_values([\"Sheet\",\"Missing_values\"], ascending=[True, False]) # type: ignore\n",
     "    return missing_values\n",
     "    \n",
     "show_files(sheets)"
@@ -1197,7 +1197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "id": "e2fcb601",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1262,7 @@
     "\n",
     "\n",
     "for i, year in enumerate(years):\n",
-    "    offset = (i - 1) * width  # Centrar barras\n",
+    "    offset = (i - 1) * width  # Center bars\n",
     "    plt.bar(x + offset, pivot_data[year], width, label=year, color=colors[i], edgecolor='black')\n",
     "\n",
     "plt.title(\"Equipment Failures by Month and Year (2021-2023)\", fontsize=16, fontweight='bold')\n",
@@ -1272,7 +1272,7 @@
     "plt.legend(title=\"Year\")\n",
     "plt.grid(axis='y', alpha=0.3)\n",
     "\n",
-    "# Añadir valores encima de las barras\n",
+    "# Adding lables values\n",
     "for i, year in enumerate(years):\n",
     "    offset = (i - 1) * width\n",
     "    for j, value in enumerate(pivot_data[year]):\n",
